# rust-security

./: .clean-code-config.toml  .clippy.toml  .editorconfig  .env.development  .env.example  .env.security  .gitignore  .jscpd.json  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .rustfmt.toml  ACHIEVEMENT_SUMMARY.md  AGENTS.md  AGENT_OS_INSTALLATION_GUIDE.md  ALL_PHASES_COMPLETE.md  API_DOCUMENTATION.md  ARCHITECTURE.md  BASIC_TESTING_GUIDE.md  CHAOS_ENGINEERING_IMPLEMENTATION_SUMMARY.md  CLEAN_CODE_CHECKLIST.md  CLEAN_CODE_IMPLEMENTATION_COMPLETE.md  CLEAN_CODE_IMPLEMENTATION_READY.md  CLEAN_CODE_IMPROVEMENTS.md  CLEAN_CODE_MINIMAL_PLAN.md  CLEAN_CODE_PLAN.md  CLEAN_CODE_PLAN_COMPLETED.md  CLEAN_CODE_QUICK_START.md  CLEAN_CODE_SUCCESS_FINAL.md  CLIPPY_FIX_COMPLETE.md  CLIPPY_FIX_PLAN.md  CLIPPY_WARNING_REDUCTION_SUCCESS.md  CODE_IMPROVEMENT_PLAN.md  COMMUNITY.md  COMPILER_WARNING_ELIMINATION_COMPLETED.md  COMPILER_WARNING_ELIMINATION_PLAN.md  COMPLETE_TRANSFORMATION_ROADMAP.md  COMPREHENSIVE_API_DOCUMENTATION.md  COMPREHENSIVE_CLEAN_CODE_COMPLETION.md  COMPREHENSIVE_IMPROVEMENT_IMPLEMENTATION_PLAN.md  COMPREHENSIVE_REMEDIATION_PLAN.md  (+196 more)
api-contracts/: Cargo.toml  README.md
api-contracts/src/: context.rs  contracts.rs  documentation.rs  errors.rs  lib.rs  middleware.rs  types.rs  versioning.rs
auth-core/: Cargo.toml
auth-core/benches/: token_performance.rs
auth-core/src/: client.rs  error.rs  lib.rs  server.rs  store.rs
auth-core/tests/: integration_security.rs  oauth2_compliance.rs  property_tests.rs  simple_tests.rs
auth-service/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.prod  Dockerfile.secure  IMPLEMENTATION_STATUS.md  METRICS_IMPLEMENTATION.md  OBSERVABILITY.md  README.md  test_endpoints.sh
auth-service/benches/: optimization_benchmarks.rs  performance_bench.rs  performance_suite.rs  security_performance_bench.rs  threat_conversion_bench.rs
auth-service/config/: sample.env
auth-service/docs/: ARCHITECTURE.md  SERVICE_CONTRACTS.md
auth-service/fuzz/: Cargo.toml
auth-service/keys/: rsa_private_key.pem
auth-service/migrations/: 000_init_database.sql  001_create_api_keys_table.sql  001_initial_production_schema.sql  20250818213800_initial_schema.sql  20250821000100_oauth_client_registration.sql  README.md
auth-service/scripts/: quick_test_validation.sh  run_comprehensive_tests.sh
auth-service/src/: adaptive_rate_limiting.rs  admin_middleware.rs  admin_replay_protection.rs  advanced_rate_limit.rs  ai_threat_detection.rs  ai_threat_detection_advanced.rs  api_key_endpoints.rs  api_key_store.rs  api_versioning.rs  app.rs  async_optimized.rs  auth_api.rs  auth_failure_logging.rs  auth_service_integration.rs  automated_compliance_assessment.rs  backpressure.rs  business_metrics.rs  cache.rs  circuit_breaker.rs  circuit_breaker_advanced.rs  client_auth.rs  config.rs  config_endpoints.rs  config_migration.rs  config_production.rs  config_reload.rs  config_secure.rs  config_secure_validation.rs  config_static.rs  config_tests.rs  connection_pool_optimized.rs  crypto_enhanced.rs  crypto_optimized.rs  crypto_secure.rs  crypto_unified.rs  csrf_protection.rs  database_optimized.rs  enhanced_jwt_validation.rs  enhanced_observability.rs  error_conversion_macro.rs  (+135 more)
auth-service/tests/: admin_protection_it.rs  api_key_management_it.rs  authorization_it.rs  common.rs  comprehensive_integration_test.rs  conversion_unit_tests.rs  cookie_issuance.rs  core_auth_tests.rs  coverage_reporting.rs  csrf_middleware.rs  enhanced_property_tests.rs  example_shared_integration_test.rs  harness.rs  health_introspect_it.rs  inprocess_endpoints_test.rs  integration_coverage.rs  jwks_rs256.rs  load_testing.rs  mocking.rs  new_modules_validation.rs  observability_test.rs  oidc_state_it.rs  openapi_endpoints_test.rs  openid_metadata_it.rs  performance_monitoring.rs  performance_test_suite.rs  performance_testing.rs  pkce_oauth_test.rs  refresh_reuse_it.rs  remote_policy_wiremock_it.rs  request_id_it.rs  scim_basic_auth_it.rs  scim_it.rs  scope_validation_test.rs  security_features_test.rs  security_logging_test.rs  security_test.rs  security_testing.rs  security_validation_test.rs  service_identity_integration_test.rs  (+18 more)
axum-integration-example/: Cargo.toml  README.md
axum-integration-example/migrations/: 001_initial.sql  001_initial_postgres.sql
axum-integration-example/migrations_sqlite/: 001_initial.sql
axum-integration-example/src/: auth.rs  database.rs  lib.rs  main.rs  repository.rs
axum-integration-example/tests/: password_auth_test.rs
chaos-engineering/: Cargo.toml
chaos-engineering/experiments/: pod-chaos-experiments.yaml
chaos-engineering/framework/: chaos_orchestrator.rs
common/: Cargo.toml  README.md
common/src/: chaos_engineering.rs  config.rs  constants.rs  cpu_optimization.rs  crypto_utils.rs  database_optimization.rs  error_recovery.rs  errors.rs  lib.rs  memory_optimization.rs  message_bus.rs  mocks.rs  optimized_client.rs  optimized_pools.rs  performance_utils.rs  production_config.rs  redis_config.rs  secure_logging.rs  sharded_rate_limiter.rs  store.rs  types.rs  utils.rs
common/tests/: config_validation.rs  working_integration.rs
compliance-tools/: Cargo.toml
compliance-tools/src/: compliance.rs  lib.rs  metrics.rs  reporting.rs  (+3 more)
input-validation/: Cargo.toml
mvp-tools/: Cargo.toml  README.md
policy-service/: Cargo.toml  Dockerfile  entities.json  policies.cedar
red-team-exercises/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  SECURITY_DASHBOARD_IMPLEMENTATION.md
security-features/: Cargo.toml
security-testing/: Cargo.toml
soar-integration/: Cargo.toml
tests/: Cargo.toml  chaos_engineering_security_tests.rs  comprehensive_security_integration_tests.rs  doctest_examples.rs  documentation_examples.rs  integration_tests.rs  load_test.rs  main.rs  middleware_integration_tests.rs  mock_threat_feed.rs  performance_regression_test.rs  phase1_security_tests.rs  phase2_operational_tests.rs  regression_test_suite.rs  security_integration_tests.rs  tenant_isolation_test.rs  threat_intel_tests.rs  warning_free_integration_test.rs
(+1537 files in other folders)
