[workspace.package]
edition = "2021"
rust-version = "1.80"

# MVP-focused workspace with 4 core crates
[workspace]
members = [
    "mvp-tools",          # Essential tooling only
    "common",             # Shared utilities
    "auth-service"        # Authentication service
]

# Enterprise components moved to /enterprise folder for post-MVP
# All complex features archived for focused MVP development

resolver = "2"

# ===== DEPENDENCY VERSION OVERRIDES =====
# Force specific versions to resolve clippy multiple_crate_versions warnings

[workspace.lints]
rust.unused_crate_dependencies = "allow"
rust.unused_imports = "allow"
rust.dead_code = "allow"
rust.unsafe_code = "forbid"

# Clippy configuration - balanced approach for code quality
# Allow most lints but suppress noisy ones for this codebase
clippy.all = { level = "warn", priority = -1 }
clippy.pedantic = { level = "allow", priority = -1 }  # Too strict for production code
clippy.nursery = { level = "allow", priority = -1 }   # Experimental lints
clippy.cargo = { level = "allow", priority = -1 }  # Suppress cargo-related warnings
clippy.multiple_crate_versions = "allow"  # Suppress dependency version conflicts

# Prefer surfacing risky patterns for cleanup
clippy.unwrap_used = "warn"
clippy.expect_used = "warn"
clippy.panic = "warn"

# Specific allow rules for acceptable patterns in this codebase
clippy.too_many_arguments = "allow"       # Complex APIs may need many params
clippy.type_complexity = "allow"          # Complex types common in async code
clippy.large_enum_variant = "allow"       # Large variants needed for error types
clippy.lint_groups_priority = "allow"     # Allow lint group priority conflicts

[workspace.dependencies]
# ===== CORE ASYNC RUNTIME =====
tokio = { version = "1.42", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["util", "limit"] }
hyper = { version = "1.5" }
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "request-id", "limit", "timeout"] }

# ===== SERIALIZATION =====
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
bincode = "1.3"
toml = "0.8"
serde_yaml = "0.9"

# ===== ERROR HANDLING =====
anyhow = "1.0"
thiserror = "2.0"

# ===== CRYPTOGRAPHY & SECURITY =====
jsonwebtoken = "9.3"
rand = "0.8"
sha2 = "0.10"
aes = "0.8"
aes-gcm = "0.10"
argon2 = "0.5"
bcrypt = "0.16"
chacha20poly1305 = "0.10"
ring = "0.17"
hmac = "0.12"
secrecy = "0.10"
subtle = "2.6"
zeroize = { version = "1.8", features = ["derive"] }
constant_time_eq = "0.3"

# ===== DATABASE =====
sqlx = { version = "0.8", features = ["postgres", "sqlite", "chrono", "uuid", "migrate", "macros", "runtime-tokio-rustls"], default-features = false }
deadpool = "0.12"
bb8 = "0.8"

# ===== CACHING & REDIS =====
redis = { version = "0.27", features = ["aio", "connection-manager", "tokio-comp"] }
deadpool-redis = "0.22"
bb8-redis = "0.17"

# ===== MONITORING & TELEMETRY =====
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
opentelemetry = { version = "0.26", features = ["metrics"] }
prometheus = "0.14"
metrics = "0.24"

# ===== HTTP & NETWORKING =====
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
http = "1.1"
http-body-util = "0.1"
urlencoding = "2.1"
url = "2.5"
rustls = "0.23"
webpki-roots = "1.0"
rustls-pemfile = "2.2"

# ===== UTILITY & COMMON =====
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
async-trait = "0.1"
headers = "0.4"
base64 = "0.22"
bytes = "1.8"
hex = "0.4"
once_cell = "1.20"
futures = "0.3"
fastrand = "2.2"
num_cpus = "1.16"
data-encoding = "2.6"
log = "0.4"

# ===== DATA STRUCTURES =====
indexmap = "2.11"
dashmap = "6.1"

# ===== ASYNC & CONCURRENCY =====
flume = "0.11"
crossbeam = "0.8"
rayon = "1.10"

# ===== CONFIGURATION =====
config = { version = "0.14", default-features = false, features = ["json", "yaml", "toml"] }
dotenvy = "0.15"

# ===== VALIDATION =====
validator = { version = "0.20", features = ["derive"] }

# ===== CLI =====
clap = { version = "4.5", features = ["derive"] }

# ===== POLICY ENGINE =====
cedar-policy = "4.5"
cedar-policy-core = "4.5"

# ===== API DOCUMENTATION =====
utoipa = { version = "5.4", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "8.1", features = ["axum"] }

# ===== CRYPTOGRAPHIC KEYS & CERTIFICATES =====
ed25519-dalek = "2.1"
x25519-dalek = "2.0"
p256 = "0.13"
x509-cert = "0.2"
pkcs8 = "0.10"
der = "0.7"

# ===== TEMPLATING =====
handlebars = "6.2"

# ===== PERFORMANCE =====
mimalloc = "0.1"

# ===== SEARCH & REGEX =====
regex = "1.11"

# ===== DEVELOPMENT & TESTING =====
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.13"
tokio-test = "0.4"

# ===== CLOUD INTEGRATIONS =====
aws-config = "1.1"
aws-sdk-secretsmanager = "1.10"
vaultrs = "0.7"

# ===== WEB SERVER =====
axum-server = "0.7"

[profile.dev]
opt-level = 0          # Disable optimization for faster builds
debug = "line-tables-only"  # Faster debug info generation
incremental = true
split-debuginfo = "unpacked"
overflow-checks = true
# Reduce codegen units for faster linking
codegen-units = 4

[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = true
# Additional optimizations for production
rpath = false

[profile.test]
opt-level = 0          # Disable optimization for faster test builds
debug = "line-tables-only"  # Faster debug info generation
incremental = true
# Faster test compilation with fewer units
codegen-units = 4
overflow-checks = true

[profile.bench]
opt-level = 3
debug = false
lto = true
codegen-units = 1
# Benchmark-specific optimizations
rpath = false
strip = true

# ===== DEVELOPMENT PROFILE WITH FASTER BUILDS =====
[profile.dev-fast]
inherits = "dev"
# Even faster development builds
opt-level = 0
incremental = true
codegen-units = 32
debug = "line-tables-only"

# ===== SECURITY-HARDENED RELEASE PROFILE =====
[profile.release-hardened]
inherits = "release"
# Additional security hardening
overflow-checks = true
panic = "abort"
