[package]
name = "api-contracts"
version = "1.0.0"
edition = "2021"
description = "API contracts and versioning framework for Rust Security Platform"
license = "MIT OR Apache-2.0"

[features]
default = ["openapi", "tracing"]
openapi = ["utoipa", "utoipa-swagger-ui", "utoipa-rapidoc"]
tracing = ["opentelemetry", "tracing-opentelemetry"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# API documentation
utoipa = { version = "4.0", optional = true }
utoipa-swagger-ui = { version = "6.0", optional = true }
utoipa-rapidoc = { version = "3.0", optional = true }

# HTTP and middleware
hyper = "1.0"
reqwest = { version = "0.11", features = ["json"] }
http = "1.0"
headers = "0.4"

# Tracing and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
opentelemetry = { version = "0.21", optional = true }
tracing-opentelemetry = { version = "0.22", optional = true }

# Validation
validator = { version = "0.19", features = ["derive"] }
regex = "1.10"
rand = "0.8"
url = "2.4"

# Async traits
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
rstest = "0.18"